<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ldaftar"
        android:textSize="15pt"
        app:layout_constrainedHeight="false"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="72dp" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="412dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edAlamat"
        android:layout_width="406dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine|textPostalAddress"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="220dp" />

    <EditText
        android:id="@+id/EdEmail"
        android:layout_width="414dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="272dp" />

    <EditText
        android:id="@+id/edPass"
        android:layout_width="403dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="334dp" />

    <EditText
        android:id="@+id/edrepas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="392dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="614dp" />
</androidx.constraintlayout.widget.ConstraintLayout>